<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gameLevels"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button_function"
        android:gravity="center"
        android:onClick="toBackFromGL"
        android:text="&#60;"
        android:textColor="@color/light_green"
        android:textSize="9pt" />

    <ImageView
        android:id="@+id/imageLevel"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mars" />

    <TextView
        android:id="@+id/textLevel"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/light_green" />

    <TextView
        android:id="@+id/textCountGold"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@id/imageGold"
        android:text="0"
        android:textColor="@color/light_green"
        android:textSize="9pt" />

    <ImageView
        android:id="@+id/imageGold"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginRight="30dp"
        android:layout_toLeftOf="@id/textCountBlackMatter"
        android:src="@drawable/gold" />

    <TextView
        android:id="@+id/textCountBlackMatter"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@id/imageMater"
        android:text="0"
        android:textColor="@color/light_green"
        android:textSize="9pt" />

    <ImageView
        android:id="@+id/imageMater"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@id/btnShop"
        android:src="@drawable/matter" />

    <Button
        android:id="@+id/btnShop"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_function"
        android:gravity="center"
        android:onClick="toShopFromGL"
        android:text="@string/text_shop"
        android:textColor="@color/light_green"
        android:textSize="5pt" />

    <TextView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp" />

    <HorizontalScrollView
        android:id="@+id/scrollLevels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/planetFirst"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/mars" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:text="@string/planet_first"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/planetSecond"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/mars" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:text="@string/planet_second"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/planetThird"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/mars" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:text="@string/planet_third"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/planetFourth"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/mars" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:text="@string/planet_fourth"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/planetFifth"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/mars" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:text="@string/planet_fifth"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/planetSixth"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/mars" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:text="@string/planet_sixth"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/planetSeven"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/mars" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:text="@string/planet_seventh"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/btnMissions"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_function"
        android:gravity="center"
        android:onClick="showMissions"
        android:text="@string/text_missions"
        android:textColor="@color/light_green"
        android:textSize="5pt" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>